# DjangoDockerApp

./: .gitignore  Dockerfile  Makefile  README.md  manage.py  pyproject.toml
core/conf/: asgi.py  wsgi.py
core/conf/settings/: main.py
docker_compose/: app.yaml  storages.yaml
