[tool.poetry]
name = "djangodockerapp"
version = "0.1.0"
description = "Created a simple application using Django, connected it to PostgreSQL and Docker."
authors = ["ssannkkkii <dianarevo26@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
